--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ __pycache__
 cinema_project/__pycache__/settings.cpython-312.pyc
 cinema_project/__pycache__/urls.cpython-312.pyc
 .env
+**__pycache__/
